<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/hudumaLogo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/common_iv_huduma_logo"
        android:src="@drawable/ic_huduma_logo_web" />

    <ImageView
        android:id="@+id/find"
        android:layout_below="@id/hudumaLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/activity_splash_search_icon"
        android:src="@android:drawable/ic_search_category_default" />

    <TextView
        android:layout_below="@id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/activity_splash_tv_find_id"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:layout_above="@id/btn_sign_up"
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg_transparent_sign_in"
        android:fontFamily="@font/lato"
        android:text="@string/common_btn_log_in"
        android:textColor="@color/red"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg_transparent"
        android:fontFamily="@font/lato"
        android:text="@string/common_btn_register"
        android:textColor="@color/darkgreen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
