<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="3"
        android:contentDescription="@string/activity_welcome_huduma_large_icon"
        android:fitsSystemWindows="true"
        android:scaleType="centerInside"
        android:src="@drawable/huduma_welcome" />

    <Button
        android:id="@+id/button_apply_for_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_welcome"
        android:fontFamily="@font/lato"
        android:text="@string/activity_welcome_btn_report_lost_id"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_welcome"
        android:fontFamily="@font/lato"
        android:text="@string/activity_welcome_btn_update_profile"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_scan_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_welcome"
        android:fontFamily="@font/lato"
        android:text="@string/activity_welcome_scan_id"
        android:textColor="@color/white"
        android:textSize="13sp" />
</LinearLayout>
