<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/activity_report_tv_report_lost_document"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/activity_report_tv_report_lost_document_subheader"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato"
            android:text="@string/activity_report_tv_select_document_type"
            android:textSize="14sp" />
        <Spinner
            android:id="@+id/spinner_documents"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_doc_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/activity_report_inputedittext_document_number"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/darkgreen"
        android:fontFamily="@font/lato"
        android:text="@string/activity_report_bt_report"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>