<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="13dp">

    <RelativeLayout
        android:id="@+id/relative_layout_found_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lime"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_found_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/lato"
            android:text="@string/frag_lostnfound_tv_found_id"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/image_view_found_dialog_cancel"
            android:contentDescription="@string/frag_lostnfound_found_id_dialog_cancel_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_cancel_black_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_found_dialog"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato"
            android:text="@string/frag_lostnfound_tv_found_id_dialog_details"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/frag_lostnfound_tv_user_found_lost_documents"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/frag_lostnfound_tv_user_lost_found_documents_details"
            android:textSize="13sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_lostnfound_tv_document_type"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_lostnfound_tv_document_number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_lostnfound_tv_document_status"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_lostnfound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_add"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
