<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/hudumaLogo"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/common_iv_huduma_logo"
        android:src="@drawable/ic_huduma_logo_web" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_signin_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/hudumaLogo">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:hint="@string/common_edittext_hint_phone_no"
            android:inputType="number|text"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/text_input_layout_signin_phone_no"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:hint="@string/common_edittext_hint_password"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_act_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg_transparent_sign_in"
        android:fontFamily="@font/lato"
        android:text="@string/common_btn_log_in"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_above="@id/text_view_account_not_exists"/>
    <TextView
        android:id="@+id/text_view_account_not_exists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/activity_signin_tv_already_have_an_account"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
